# songisms

./: .gitignore  .prettierrc.js  Procfile  README.md  README.rst  manage.py  nltk.txt  pyproject.toml  requirements-dev.txt  requirements.txt  schema.graphql
api/: admin.py  apps.py  cloud_utils.py  managers.py  models.py  nlp_utils.py  schema.graphql  schema.py  urls.py  utils.py
api/migrations/: 0001_initial.py  0002_ngram_ipa_ngram_phones_ngram_stresses.py  0003_auto_20220530_0005.py  0004_alter_tag_unique_together.py  0005_alter_song_spotify_id.py  0006_ngram_formants.py  0007_writer_alt_names.py  0008_alter_writer_alt_names.py  0009_songngram_song_ngrams_new_alter_writer_alt_names_and_more.py  0010_remove_song_ngrams.py  0011_rename_ngrams_new_song_ngrams.py  0012_alter_songngram_ngram_alter_songngram_song.py  0013_alter_song_ngrams.py  0014_ngram_score.py  0015_remove_ngram_score_ngram_adj_pct_ngram_pct.py  0016_alter_ngram_adj_pct_alter_ngram_pct_and_more.py  0017_rhyme_level_alter_rhyme_song.py  0018_remove_ngram_formants_remove_ngram_stresses_and_more.py  0019_alter_ngram_mscore.py  0020_alter_ngram_mscore.py  0021_cache.py  0022_rename_metadata_cache_data_cache_file.py  0023_alter_cache_key_alter_cache_unique_together.py  0024_alter_ngram_phones.py  0025_ngram_stresses_attachment.py  0026_line.py  0027_song_is_new.py  0028_remove_song_lyrics_ipa_remove_song_lyrics_raw.py  0029_alter_attachment_managers_ngram_title_pct.py  0030_ngram_song_pct.py  0031_ngram_count_ngram_song_count.py
api/utils/: __init__.py  cloud.py  gpt.py  gql.py  ipa.py  ml.py  text.py  text2.py
client/: package.json
clients/browser/: package.json
clients/rhymes/: package.json
clients/shared/: layout.scss
clients/writers/: package.json
data/: .simsounds.json  doc2vec.model  idioms.txt  ipa_gpt.json  ldavis_5.html  lines.txt  lyrics.w2v  mine.txt  mine_raw.txt  rhymes.json  rhymes.txt  rhymes_test.csv  rhymes_train.csv  rhymes_train.txt  simsounds.json  synonyms.txt  synonyms_manual.txt
data/fixtures/: artists.json  attachments.json  tags.json  (+1 more)
rhymes/: admin.py  apps.py  managers.py  models.py  nn.py  package.json  urls.py  views.py
scripts/: filter_mine.js  gen_topics.py  gpt_temperature.py  load_data.py  load_formants.py  lyric_sim.py  make_ipa.py  make_rhymes_test.py  make_vectors.py  output_rhymes.py  proc_gpt_ipa.py  rhyme_score.py  train_rhymes.py  train_writers.py
shared/: StyledLayout.jsx  useAuth.js
songisms/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
songs/: admin.py  managers.py  models.py  package.json  schema.graphql  schema.py  urls.py  views.py
(+143 files in other folders)
